nginx-ingress-controller-migration/go-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
